# point_cloud_viewer

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  Makefile  README.md  README.rst  build.rs  experiments.md  package.json
benches/generate_and_query/: main.rs  random_points.rs
build_proto/: Cargo.toml
build_proto/src/: lib.rs
ci/: before_script.sh  install.sh  install_proto3.sh  script.sh
client/: control.ts  index.html  main.ts  octree_viewer.ts  package.json  tsconfig.json  typings.json
grpc/: Cargo.toml  build.rs
grpc/src/: lib.rs  proto.proto
octree_web_viewer/: Cargo.toml  README.md
octree_web_viewer/client/: control.ts  helper.ts  index.html  main.ts  octree_viewer.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json
octree_web_viewer/client/lib/: array-helper.ts  async-tasks-queue.ts
octree_web_viewer/src/: backend.rs  backend_error.rs  lib.rs  state.rs  utils.rs
point_cloud_client/: Cargo.toml
point_cloud_client/src/: lib.rs  logging.rs
point_cloud_test/: Cargo.toml
point_cloud_test/benches/: main.rs
point_cloud_test/src/: lib.rs  queries.rs  synthetic_data.rs
point_cloud_test/tests/: main.rs
point_cloud_test_lib/benches/: main.rs
point_cloud_test_lib/src/: lib.rs  queries.rs  synthetic_data.rs
point_viewer_grpc/: Cargo.toml
point_viewer_grpc/src/: lib.rs  service.rs
point_viewer_grpc_proto_rust/: Cargo.toml  build.rs
point_viewer_grpc_proto_rust/src/: lib.rs  proto.proto
point_viewer_proto_rust/: Cargo.toml  build.rs
point_viewer_proto_rust/src/: lib.rs  proto.proto
proto_helper/: Cargo.toml
proto_helper/src/: lib.rs
protobuf_provider/: Cargo.toml  build.rs
protobuf_provider/src/: lib.rs
protoc_provider/: Cargo.toml
protoc_provider/src/: lib.rs
quadtree/: Cargo.toml
quadtree/src/: lib.rs
sdl_viewer/: Cargo.toml  README.md  build.rs
sdl_viewer/shaders/: box_drawer_outline.fs  box_drawer_outline.vs  outlinedBox.fs  outlinedBox.vs  points.fs  points.vs  terrain.fs  terrain.gs  terrain.vs
sdl_viewer/src/: box_drawer.rs  boxdrawer.rs  camera.rs  color.rs  glhelper.rs  graphic.rs  lib.rs  main.rs  node_drawer.rs  sparse_texture_loader.rs  terrain.rs
sdl_viewer/src/graphic/: mod.rs  moving_texture.rs  moving_window_texture.rs  program.rs  tiled_texture_loader.rs  uniform.rs
sdl_viewer/src/terrain/: layer.rs  mod.rs  read_write.rs
sdl_viewer/src/terrain_drawer/: layer.rs  mod.rs  read_write.rs
src/: attributes.rs  batch_iterator.rs  codec.rs  color.rs  errors.rs  generation.rs  iterator.rs  lib.rs  math.rs  octree.rs  parallel_iterator.rs  ply.rs  point_stream.rs  proto.proto  proto.rs  pts.rs  s2.rs  s2_geo.rs  utils.rs
src/bench/: generate_and_query.rs
src/data_provider/: common.rs  factory.rs  mod.rs  on_disk.rs
src/geometry/: aabb.rs  cube.rs  frustum.rs  mod.rs  obb.rs  s2_cell_union.rs  web_mercator_rect.rs
src/math/: aabb.rs  base.rs  frustum.rs  mod.rs  obb.rs  sat.rs  web_mercator.rs
src/octree/: batch_iterator.rs  factory.rs  generation.rs  mod.rs  node.rs  node_iterator.rs  node_writer.rs  octree_iterator.rs  octree_test.rs  on_disk.rs  tests.rs
src/read_write/: attribute_reader.rs  cache.rs  codec.rs  cube.rs  input_file_iterator.rs  mod.rs  node_iterator.rs  node_writer.rs  ply.rs  pts.rs  raw.rs  s2.rs
src/s2_cells/: mod.rs
src/test_data/: xyz_f32_rgb_u8_intensity_f32.ply  xyz_f32_rgb_u8_le.ply  xyz_f32_rgba_u8_le.ply
tests/generate_and_query/: main.rs
web_viewer/: Cargo.toml
web_viewer/client/: control.ts  main.ts  octree_viewer.ts  package-lock.json  package.json  tsconfig.json
web_viewer/src/: lib.rs  main.rs
xray/: Cargo.toml
xray/client/: control.ts  index.html  main.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  xray_viewer.ts
xray/output_dir/: lat_lng_to_geometric_map_transforms.pb  meta.pb
xray/src/: backend.rs  build_quadtree.rs  colormap.rs  generation.rs  inpaint.rs  lib.rs  proto.proto  utils.rs
xray_proto_rust/: Cargo.toml  build.rs
xray_proto_rust/src/: proto.proto
