# Copyright 2016 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "point_viewer"
version = "0.1.0"
authors = [
   "Holger Rapp <hrapp@lyft.com>",
   "Marco Feuerstein <mfeuerstein@lyft.com>",
   "Nikolai Morin <nmorin@lyft.com>",
   "Caterina Vitadello <cvitadello@lyft.com>"
]
edition = "2018"

[dependencies]
alga = "0.9.2"
arrayvec = "0.5.1"
byteorder = "1.3.4"
crossbeam = "0.7.3"
error-chain = "0.12.2"
fnv = "1.0.6"
image = "0.23.1"
libc = "0.2.67"
lru = "0.4.3"
nalgebra = { version = "0.20.0", features = ["serde-serialize"] }
nav-types = "0.4.4"
num = "0.2.1"
num_cpus = "1.12.0"
num-integer = "0.1.42"
num-traits = "0.2.11"
pbr = "1.0.2"
protobuf = "2.10.2"
rayon = "1.3.0"
s2 = { version = "0.0.10", features = ["serde"] }
serde = "1.0.104"
serde_derive = "1.0.104"
structopt = "0.3.11"
walkdir = "2.3.1"
rand = "0.7.3"

[dependencies.point_viewer_proto_rust]
path = "point_viewer_proto_rust"

[dev-dependencies]
lazy_static = "1.4.0"
tempdir = "0.3.7"
approx = "0.3.2"

[workspace]
members = [
   "octree_web_viewer",
   "point_cloud_client",
   "point_cloud_test",
   "point_viewer_grpc",
   "point_viewer_grpc_proto_rust",
   "point_viewer_proto_rust",
   "protobuf_provider",
   "quadtree",
   "sdl_viewer",
   "xray",
   "xray_proto_rust",
]
