# Copyright 2016 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "point_viewer"
version = "0.1.0"
authors = [
   "Holger Rapp <hrapp@lyft.com>",
   "Marco Feuerstein <mfeuerstein@lyft.com>",
   "Nikolai Morin <nmorin@lyft.com>",
   "Caterina Vitadello <cvitadello@lyft.com>"
]
edition = "2018"

[dependencies]
arrayvec = "0.5.1"
byteorder = "1.3.4"
clap = "3.0.0-beta.2"
crossbeam = "0.8.0"
error-chain = "0.12.4"
fnv = "1.0.7"
image = "0.23.12"
libc = "0.2.79"
lru = "0.6.0"
nalgebra = { version = "0.22.0", features = ["serde-serialize"] }
nav-types = "0.5.1"
num = "0.3.0"
num_cpus = "1.13.0"
num-integer = "0.1.43"
num-traits = "0.2.12"
pbr = "1.0.3"
protobuf = "2.18.0"
rayon = "1.5.1"
s2 = { version = "0.0.10", features = ["serde"] }
serde = "1.0.116"
serde_derive = "1.0.116"
simba = "0.2.1"
rand = "0.7.3"

[dependencies.point_viewer_proto_rust]
path = "point_viewer_proto_rust"

[dev-dependencies]
lazy_static = "1.4.0"
tempdir = "0.3.7"
approx = "0.3.2"

[workspace]
members = [
   "octree_web_viewer",
   "point_cloud_client",
   "point_cloud_test",
   "point_viewer_proto_rust",
   "protobuf_provider",
   "quadtree",
   "sdl_viewer",
   "xray",
   "xray_proto_rust",
]
