# Copyright 2016 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Holger Rapp <hrapp@google.com>"]
name = "octree_web_viewer"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
byteorder = "^0.5.3"
cgmath = "0.16.0"
clap = "2.32.0"
crossbeam-utils = "0.6.5"
failure = "0.1.5"
futures = "0.1.25"
json = "0.11.3"
serde = "1.0.89"
serde_derive = "1.0.89"
structopt = "0.2.15"
time = "0.1.42"

[dependencies.point_viewer]
path = ".."
