# Copyright 2016 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Holger Rapp <hrapp@google.com>"]
name = "octree_web_viewer"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
byteorder = "1.3.2"
cgmath = "0.17.0"
crossbeam-utils = "0.7.0"
failure = "0.1.6"
json = "0.12.1"
serde = "1.0.104"
serde_derive = "1.0.104"
structopt = "0.3.9"
time = "0.2.6"

[dependencies.point_viewer]
path = ".."
