# Copyright 2016 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "octree_web_viewer"
version = "0.1.0"
authors = [
   "Holger Rapp <hrapp@lyft.com>",
   "Marco Feuerstein <mfeuerstein@lyft.com>",
   "Nikolai Morin <nmorin@lyft.com>",
   "Caterina Vitadello <cvitadello@lyft.com>"
]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-web = "3.1.0"
byteorder = "1.3.4"
clap = "3.0.0-beta.2"
crossbeam-utils = "0.7.2"
failure = "0.1.8"
json = "0.12.4"
nalgebra = "0.22.0"
serde = "1.0.116"
serde_derive = "1.0.116"
time = "0.2.22"

[dependencies.point_viewer]
path = ".."
