[package]
name = "point_cloud_client"
version = "0.1.0"
authors = [
   "Holger Rapp <hrapp@lyft.com>",
   "Marco Feuerstein <mfeuerstein@lyft.com>",
   "Nikolai Morin <nmorin@lyft.com>",
   "Caterina Vitadello <cvitadello@lyft.com>"
]
edition = "2018"

[[bin]]
name = "point_cloud_client_test"
path = "src/bin/test.rs"

[dependencies]
clap = "3.0.0-beta.1"
fnv = "1.0.6"
nalgebra = "0.21.0"
num_cpus ="1.13.0"
point_viewer = { path = ".." }
point_viewer_grpc = { path = "../point_viewer_grpc" }
protobuf = "2.14.0"
