# Copyright 2016 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "point_cloud_test_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
bencher = "0.1.5"
lazy_static = "1.4.0"
nalgebra = "0.20.0"
num-integer = "0.1.42"
point_cloud_client = { path = "../point_cloud_client" }
point_viewer = { path = ".." }
protobuf = "2.10.1"
rand = "0.7.3"
rayon = "1.3.0"
s2 = { version = "0.0.10", features = ["serde"] }
tempdir = "0.3.7"

[[bench]]
name = "main"
harness = false
