# Copyright 2016 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Holger Rapp <holger@lyft.com>"]
name = "point_viewer_grpc"
version = "0.1.0"
edition = "2018"

[dependencies]
collision = "0.18.0"
cgmath = "0.16.0"
clap = "2.32.0"
crossbeam-channel = "0.3.8"
ctrlc = "3.1.2"
futures = "0.1.17"
grpcio = "0.4"
protobuf = "2.0.0"
scoped-pool = "^0.1"

[dependencies.point_viewer]
path = ".."

[dependencies.point_viewer_grpc_proto_rust]
path = "../point_viewer_grpc_proto_rust"
