# Copyright 2016 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Holger Rapp <holger@lyft.com>"]
name = "point_viewer_grpc"
version = "0.1.0"
edition = "2018"

[dependencies]
collision = "0.20.1"
cgmath = "0.17.0"
clap = "2.33.0"
crossbeam-channel = "0.3.8"
ctrlc = "3.1.2"
futures = "0.1.17"
grpcio = "0.4"
num_cpus ="1.10.1"
num-integer = "0.1.41"
protobuf = "2.8.0"
scoped-pool = "1.0.0"

[dependencies.point_viewer]
path = ".."

[dependencies.point_viewer_grpc_proto_rust]
path = "../point_viewer_grpc_proto_rust"
