# Copyright 2016 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Holger Rapp <hrapp@google.com>"]
name = "sdl_viewer"
version = "0.1.0"
edition = "2018"

[build-dependencies]
gl_generator = "0.13.0"

[dependencies]
byteorder = "1.3.2"
cgmath = "0.17.0"
clap = "2.33.0"
collision = "0.20.1"
fnv = "1.0.6"
image = "0.22.2"
lru = "0.1.15"
num-integer = "0.1.41"
rand = "0.3.15"
sdl2 = "0.32.2"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.33"
time = "^0.1.35"

[features]
static-link = [ "sdl2/static-link", "sdl2/bundled" ]

[dependencies.point_viewer]
path = ".."

[dependencies.point_viewer_grpc]
path = "../point_viewer_grpc"

