# Copyright 2016 The Cartographer Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "sdl_viewer"
version = "0.1.0"
authors = [
   "Holger Rapp <hrapp@lyft.com>",
   "Marco Feuerstein <mfeuerstein@lyft.com>",
   "Nikolai Morin <nmorin@lyft.com>",
   "Caterina Vitadello <cvitadello@lyft.com>"
]
edition = "2018"

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]
byteorder = "1.3.4"
clap = "3.0.0-beta.2"
fnv = "1.0.7"
image = "0.23.10"
lru = "0.6.0"
nalgebra = "0.27.1"
num-integer = "0.1.43"
rand = "0.7.3"
rustversion = "1.0.3"
sdl2 = "0.34.3"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
time = "0.2.22"

[features]
static-link = [ "sdl2/static-link", "sdl2/bundled" ]

[dependencies.point_viewer]
path = ".."
