[package]
name = "xray"
version = "0.1.0"
authors = [
   "Holger Rapp <hrapp@lyft.com>",
   "Marco Feuerstein <mfeuerstein@lyft.com>",
   "Nikolai Morin <nmorin@lyft.com>",
   "Caterina Vitadello <cvitadello@lyft.com>",
   "Kamil Popielarz <kpopielarz@lyft.com>"
]
edition = "2018"

[dependencies]
clap = "2.33.0"
crossbeam = "0.7.3"
fnv = "1.0.6"
globwalk = "0.8.0"
image = "0.23.1"
imageproc = "0.20.0"
iron = "0.6.1"
lazy_static = "1.4.0"
nalgebra = "0.20.0"
num = "0.2.1"
pbr = "1.0.2"
protobuf = "2.10.2"
rayon = "1.3.0"
router = "0.6.0"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
structopt = "0.3.11"
texture-synthesis = "0.8.0"
urlencoded = "0.6.0"
streaming-stats = "0.2.3"

[dependencies.point_viewer]
path = ".."

[dependencies.point_viewer_grpc]
path = "../point_viewer_grpc"

[dependencies.point_cloud_client]
path = "../point_cloud_client"

[dependencies.xray_proto_rust]
path = "../xray_proto_rust"

[dependencies.quadtree]
path = "../quadtree"
