[package]
name = "xray"
version = "0.1.0"
authors = [
   "Holger Rapp <hrapp@lyft.com>",
   "Marco Feuerstein <mfeuerstein@lyft.com>",
   "Nikolai Morin <nmorin@lyft.com>",
   "Caterina Vitadello <cvitadello@lyft.com>",
   "Kamil Popielarz <kpopielarz@lyft.com>"
]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
crossbeam = "0.8.0"
fnv = "1.0.7"
globwalk = "0.8.0"
image = "0.23.10"
imageproc = "0.21.0"
iron = "0.6.1"
lazy_static = "1.4.0"
nalgebra = "0.27.1"
num = "0.3.0"
pbr = "1.0.3"
protobuf = "2.18.0"
rayon = "1.5.1"
router = "0.6.0"
serde = "1.0.116"
serde_json = "1.0.58"
serde_derive = "1.0.116"
texture-synthesis = "0.8.0"
urlencoded = "0.6.0"
streaming-stats = "0.2.3"

[dependencies.point_viewer]
path = ".."

[dependencies.point_cloud_client]
path = "../point_cloud_client"

[dependencies.xray_proto_rust]
path = "../xray_proto_rust"

[dependencies.quadtree]
path = "../quadtree"
